--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,7 @@
       package="com.example"
       android:versionCode="1"
       android:versionName="1.0">
+    <uses-permission android:name="android.permission.INTERNET" />
     <application android:label="@string/app_name" >
         <activity android:name="MyActivity"
                   android:label="@string/app_name">
@@ -13,3 +14,4 @@
         </activity>
     </application>
 </manifest>
+
